# ynab-helper

./: .env.example  .gitignore  README.md  pyproject.toml  skills-lock.json
.agents/skills/categorize-unmatched/: SKILL.md
.cursor/plans/: target_ynab_categorizer_da927755.plan.md
config/: categories.json  config.yaml  rules.yaml
docs/: glossary.md
docs/adr/: 001-match-and-split.md  002-cursor-skill-for-unmatched.md  003-exact-match-v1.md  004-imprecise-split-math.md  005-ynab-bootstrap-date.md
src/ynab_helper/: __main__.py  categorizer.py  cli.py  config.py  fetch.py  matcher.py  models.py  split_calculator.py  state.py  target_scraper.py  undo.py  ynab_client.py
src/ynab_helper/web/: __init__.py  app.py
src/ynab_helper/web/templates/: index.html
tests/: test_core.py  test_state.py  test_target_scraper.py
